Fix wrap-content

--- a/index.css
+++ b/index.css
@@ -1,86 +1,103 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
 }
-header{
+
+header {
     padding: 10px;
     background-color: #0a1e87;
-    margin: 10px;
+    margin: 0px;
 }
-header h1{
+
+header h1 {
     text-align: center;
     color: #ffffff;
 }
-nav{
+
+nav {
     padding: 3px;
     /* background-color: #f7f8fc; */
     display: flex;
     justify-content: space-around;
 }
-nav a{
+nav a {
     text-decoration: none;
     color: #71798a;
     font-weight: bold;
     transition: 0.4s;
-    /* border: 1px solid black; */
     padding: 10px 20px;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 0px 0px 7px -1px #FFFFFF;
 }
-nav a:hover{
-    text-decoration: underline;
-    color: rgb(196, 196, 196);
 
+nav a:hover {
+    color: rgb(196, 196, 196);
 }
-.main-content{
+
+.main-content {
     display: flex;
-    background-color: #00000065;
-}
-.test{
-    width: 50%;
-    margin: 20px;
+    background-color: #61616165;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
 }
-#fut{
+
+.test {
+    width: 40%;
+    margin: 20px;
+
+}
+#fut {
     margin-top: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;    
-}
-#fut h2{
-    font-size: 50px;
-    font-weight: bold;
+    justify-content: center;
 }
 
-#fut article{
+#fut h2 {
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#fut article {
     margin-left: 50px;
 }
-.div-container{
+
+.div-container {
     display: flex;
     flex-direction: column;
 }
-#logo-fut{
-    width: 30px;
-    height: 30px;
+
+#logo-fut {
+    width: 25px;
+    height: 25px;
+    margin-left: 5px;
 }
-#img-container{
+
+#img-container {
     width: 200px;
 }
-main{
+
+main {
     padding: 10px;
     background-color: gray;
-    margin: 10px;
+    margin: 0px;
 }
-article{
-    background-color: lightgray;
+
+article {
+    background-color: rgb(255, 255, 255);
     padding: 5px;
 }
-article aside{
+
+article aside {
     background-color: rgb(196, 195, 195);
 }
-footer{
+
+footer {
     background-color: black;
     color: white;
     text-align: center;
